[project]
name = "gradmapopt"
version = "0.1.0"
description = ""
authors = [
    {name = "u5a91",email = "fruitmix246@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch (>=2.11.0,<3.0.0)",
    "botorch (>=0.17.2,<0.18.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "python-multipart (>=0.0.24,<0.0.25)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
